@@ -46,6 +46,7 @@ type
   ISDLItem = interface(IParameterBlockItem)
     ['{a34b6064-5ae9-4fc1-85c3-f145f069b607}']
     procedure addByte(aValue: byte);
+    procedure addShortInt(aValue: ShortInt);
     procedure addShortInteger(aValue: integer);
     procedure SetAsShortInteger(aValue: integer);
     procedure SetAsTinyInteger(aValue: integer);
@@ -213,7 +214,7 @@ begin
     case array_desc_dtype of
     blr_short,blr_long,
     blr_int64,blr_quad:
-        SDLItem.AddByte(byte(array_desc_scale));
+        SDLItem.addShortInt(byte(array_desc_scale));
 
     blr_text,blr_cstring, blr_varying:
         SDLItem.addShortInteger(array_desc_length);
