@@ -11,6 +11,8 @@ FBINTF Change Log  version          (1.1-6 Build 12044) Fri, 17 Apr 2020 12:30:0
 
 3.  IUtil.FormatStatus now used to format error messages when using new API
 
+4.  Fixed Array SDL: array_desc_scale now correctly encoded as a signed integer.
+
 FBINTF Change Log  version          (1.1-5 Build 12044) Fri, 17 Apr 2020 12:30:01 +0100
 
 1. ISQLParams.GetHasCaseSensitiveParams added. Returns true if param names are
